--- a/package.json
+++ b/package.json
@@ -4,20 +4,19 @@
   "description": "JavaScript and TypeScript example starter project",
   "main": "index.html",
   "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html",
+    "dev": "parcel build src/index.ts & node dist/index.js",
+    "build": "parcel build src/index.ts",
     "test": "jest"
   },
   "dependencies": {
-    "@babel/core": "^7.20.2",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
     "idb": "7.1.1",
     "jest": "29.3.1",
     "parcel-bundler": "^1.6.1"
   },
   "devDependencies": {
+    "inversify": "^6.0.1",
     "prettier": "^2.7.1",
+    "reflect-metadata": "^0.1.13",
     "ts-jest": "^29.0.3",
     "typescript": "4.4.4"
   },
